--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "checkJs": true,
     "jsx": "react-jsx",
     "resolveJsonModule": true,
-    "types": ["node"],
+    "types": ["node", "react"],
     "baseUrl": "./",
     "paths": {
       "@/*": ["src/*"]
